MDEV-14038 ALTER TABLE does not exit on error with InnoDB + bad default function

Changing Field::set_default from void to int.
It now uses the same return value notation with Field::store*()
and Item::save_in_field().